--- a/src/app/pages/x01/x01.html
+++ b/src/app/pages/x01/x01.html
@@ -14,7 +14,7 @@
       <label>Input Mode:
         <select [(ngModel)]="game.inputMode" name="inputMode" (change)="game.resetRound()">
           <option value="dart-by-dart">Dart by Dart</option>
-          <option value="per-turn">Per Turn (3 darts)</option>
+          <option value="per-turn">Per Visit</option>
         </select>
       </label>
     </form>
