--- a/src/app/pages/checkout/checkout.html
+++ b/src/app/pages/checkout/checkout.html
@@ -11,15 +11,18 @@
     </form>
 
     <h3>Players</h3>
-    <div class="players-list">
-      <div *ngFor="let player of players; let i = index" class="player-item">
-        <span>{{ player.name }}</span>
-        <button type="button" (click)="removePlayer(i)" *ngIf="players.length > 1">Remove</button>
-      </div>
+    <div *ngIf="players.length === 0" class="player-mode-select">
+      <button type="button" (click)="addPlayer('Player 1'); addPlayer('Player 2')" class="mode-btn">Add Players</button>
     </div>
-    <div class="add-player">
-      <input type="text" [(ngModel)]="newPlayerName" placeholder="Player name" (keyup.enter)="addPlayer()" />
-      <button type="button" (click)="addPlayer()">Add Player</button>
+    
+    <div *ngIf="players.length > 0">
+      <div class="players-list">
+        <div *ngFor="let player of players; let i = index" class="player-item">
+          <input type="text" [(ngModel)]="player.name" [placeholder]="'Player ' + (i + 1)" />
+          <button type="button" (click)="removePlayer(i)" *ngIf="players.length > 1">Remove</button>
+        </div>
+      </div>
+      <button type="button" (click)="addPlayer()" class="add-more-btn" *ngIf="players.length > 1">Add Player</button>
     </div>
     
     <button type="button" (click)="startTraining()" class="start-btn">Start Training</button>
@@ -30,15 +33,15 @@
       <h3>Progress</h3>
       <div *ngFor="let player of players; let i = index" class="score-row" [class.active]="i === currentPlayerIndex" [class.failed]="player.failed">
         <span class="player-name">{{ player.name }}</span>
-        <span class="player-target">Target: {{ player.target }}</span>
-        <span class="player-darts">Darts: {{ player.dartsThrown }}/9</span>
+        <span class="player-target"> Target: {{ player.target }}</span>
+        <span class="player-darts"> Darts: {{ player.dartsThrown }}/9</span>
         <span class="player-checkouts">✓ {{ player.checkouts }}</span>
       </div>
     </div>
 
     <div class="current-turn">
       <h3>Current Turn: {{ currentPlayer.name }}</h3>
-      <p>Target: {{ currentPlayer.target }} | Current: {{ currentPlayer.score }}</p>
+      <p> Current left: {{ currentPlayer.score }}</p>
     </div>
     
     <app-darts-input 
